# detection-moving-mnist

./: .gitignore  README.md  calculate_dataset_statistics.py  generate.py  generate_dataset_slurm_job.sh  pyproject.toml  requirements.txt  to_video.py  upload_dataset_to_huggingface.ipynb  visualize_trajectories.ipynb
src/detection_moving_mnist/mmnist/: mmnist.py  trajectory.py
src/mmnist/: mmnist.py  trajectory.py
src/utils/: utils.py
